# Firefly

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: stm32_toolchain.cmake
config/: rtos_config.h
docs/: resources.md
examples/: CMakeLists.txt
examples/blinky/: CMakeLists.txt  main.c
examples/rtos_demo/: CMakeLists.txt  main.c
hal/stm32f401/: CMakeLists.txt
hal/stm32f401/include/: core_cmSimd.h  fault_indicator.h  fpu.h  nvic.h  rcc.h  stm32f401xc.h
hal/stm32f401/src/: fault_indicator.c  fpu.c  gpio.c  nvic.c  rcc.c
include/: rtos.h
kernel/: CMakeLists.txt
kernel/include/: mutex.h  scheduler.h  task.h
kernel/src/: scheduler.c  task.c
linker/: stm32f401.ld
port/cortex_m4/: CMakeLists.txt
port/cortex_m4/include/: nvic.h  port.h  systick.h
port/cortex_m4/src/: nvic.c  port.c  port.s  systick.c
src/hal/stm32f401/: CMakeLists.txt
src/hal/stm32f401/include/: fault_indicator.h  gpio.h  hal.h
src/hal/stm32f401/src/: gpio.c  rcc.c
src/kernel/include/: mutex.h  queue.h  scheduler.h  semaphore.h  task.h
src/kernel/src/: mutex.c  queue.c  scheduler.c  semaphore.c  task.c
src/linker/: stm32f401.ld
src/port/cortex_m4/: CMakeLists.txt
src/port/cortex_m4/include/: port.h
src/port/cortex_m4/src/: port.c  port.s  systick.c
src/startup/: startup_stm32f401.c
startup/: startup_stm32f401.c
tools/: flash.sh
